NetEmuPlugin: Redesign context class creation
Rename YangToSources -> NetEmuDefined

Add .CompileTime.YangModules context w/NorevLookup of MD-SAL-generated
YANG package names