@@ -2,6 +2,7 @@ package org.opendaylight.mdsal.binding.maven.api.gen.plugin;
 
 import java.io.File;
 import java.io.IOException;
+
 import java.util.Collection;
 import java.util.Map;
 import java.util.Optional;
@@ -10,9 +11,6 @@ import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Function;
 
 import javax.annotation.Nonnull;
-
-import com.google.common.collect.ImmutableSet;
-import static com.google.common.collect.ImmutableSet.toImmutableSet;
 
 import org.apache.maven.project.MavenProject;
 import org.sonatype.plexus.build.incremental.BuildContext;
@@ -24,15 +22,13 @@ import org.opendaylight.yangtools.yang2sources.spi.BasicCodeGenerator;
 import org.opendaylight.yangtools.yang2sources.spi.BuildContextAware;
 import org.opendaylight.yangtools.yang2sources.spi.MavenProjectAware;
 
-import org.opendaylight.mdsal.binding.spec.naming.BindingMapping;
-
 
 public class NetEmuCodeGenerator
         implements BasicCodeGenerator, BuildContextAware, MavenProjectAware {
 
     @Nonnull
-    public static final AtomicReference<Set<String>> YANG_MODULE_PACKAGES
-            = new AtomicReference<>(ImmutableSet.of());
+    public static final AtomicReference<Set<Module>> YANG_MODULES
+            = new AtomicReference<>(Set.of());
 
     @Nonnull
     private final CodeGeneratorImpl _impl = new CodeGeneratorImpl();
@@ -50,11 +46,7 @@ public class NetEmuCodeGenerator
         final var result = this._impl.generateSources(
                 yangContext, outputDir, yangModules, resourcePathResolver);
 
-        YANG_MODULE_PACKAGES.set(yangModules.stream()
-                .map(Module::getQNameModule)
-                .map(BindingMapping::getRootPackageName)
-                .collect(toImmutableSet()));
-
+        YANG_MODULES.set(Set.copyOf(yangModules));
         return result;
     }
 
